--- a/Wpf_core_diploma/DIPloma.csproj
+++ b/Wpf_core_diploma/DIPloma.csproj
@@ -10,8 +10,11 @@
 
   <ItemGroup>
     <None Remove="Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17 1.png" />
+    <None Remove="Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17 4.png" />
     <None Remove="Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17.jpg" />
     <None Remove="Resources\dw1.png" />
+    <None Remove="Resources\free-icon-dark-mode-6714978.png" />
+    <None Remove="Resources\sunny.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -30,8 +33,11 @@
 
   <ItemGroup>
     <Resource Include="Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17 1.png" />
+    <Resource Include="Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17 4.png" />
     <Resource Include="Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17.jpg" />
     <Resource Include="Resources\dw1.png" />
+    <Resource Include="Resources\free-icon-dark-mode-6714978.png" />
+    <Resource Include="Resources\sunny.png" />
   </ItemGroup>
 
   <ItemGroup>
