--- a/Wpf_core_diploma/DIPloma.csproj
+++ b/Wpf_core_diploma/DIPloma.csproj
@@ -14,8 +14,10 @@
     <None Remove="Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17.jpg" />
     <None Remove="Resources\dw1.png" />
     <None Remove="Resources\free-icon-dark-mode-6714978.png" />
+    <None Remove="Resources\jornal 2.png" />
     <None Remove="Resources\msedge_O3xG2PAYzg.png" />
     <None Remove="Resources\sunny.png" />
+    <None Remove="Resources\Добавить 2 2.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -38,8 +40,10 @@
     <Resource Include="Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17.jpg" />
     <Resource Include="Resources\dw1.png" />
     <Resource Include="Resources\free-icon-dark-mode-6714978.png" />
+    <Resource Include="Resources\jornal 2.png" />
     <Resource Include="Resources\msedge_O3xG2PAYzg.png" />
     <Resource Include="Resources\sunny.png" />
+    <Resource Include="Resources\Добавить 2 2.png" />
   </ItemGroup>
 
   <ItemGroup>
