--- a/Wpf_core_diploma/DIPloma.csproj
+++ b/Wpf_core_diploma/DIPloma.csproj
@@ -5,24 +5,26 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
-    <ApplicationIcon>-school_90226.ico</ApplicationIcon>
+    <ApplicationIcon>dw1.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <None Remove="Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17 1.png" />
     <None Remove="Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17 4.png" />
     <None Remove="Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17.jpg" />
+    <None Remove="Resources\delete.png" />
     <None Remove="Resources\dw1.png" />
     <None Remove="Resources\free-icon-dark-mode-6714978.png" />
     <None Remove="Resources\jornal 2.png" />
     <None Remove="Resources\msedge_O3xG2PAYzg.png" />
     <None Remove="Resources\pngwing.com.png" />
     <None Remove="Resources\sunny.png" />
+    <None Remove="Resources\Update1.png" />
     <None Remove="Resources\Добавить 2 2.png" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="-school_90226.ico" />
+    <Content Include="dw1.ico" />
   </ItemGroup>
 
   <ItemGroup>
@@ -45,12 +47,14 @@
     <Resource Include="Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17 1.png" />
     <Resource Include="Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17 4.png" />
     <Resource Include="Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17.jpg" />
+    <Resource Include="Resources\delete.png" />
     <Resource Include="Resources\dw1.png" />
     <Resource Include="Resources\free-icon-dark-mode-6714978.png" />
     <Resource Include="Resources\jornal 2.png" />
     <Resource Include="Resources\msedge_O3xG2PAYzg.png" />
     <Resource Include="Resources\pngwing.com.png" />
     <Resource Include="Resources\sunny.png" />
+    <Resource Include="Resources\Update1.png" />
     <Resource Include="Resources\Добавить 2 2.png" />
   </ItemGroup>
 
