--- a/Wpf_core_diploma/DIPloma.csproj
+++ b/Wpf_core_diploma/DIPloma.csproj
@@ -12,8 +12,10 @@
     <None Remove="Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17 1.png" />
     <None Remove="Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17 4.png" />
     <None Remove="Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17.jpg" />
+    <None Remove="Resources\del1.png" />
     <None Remove="Resources\delete.png" />
     <None Remove="Resources\dw1.png" />
+    <None Remove="Resources\edit1.png" />
     <None Remove="Resources\free-icon-dark-mode-6714978.png" />
     <None Remove="Resources\jornal 2.png" />
     <None Remove="Resources\msedge_O3xG2PAYzg.png" />
@@ -47,8 +49,10 @@
     <Resource Include="Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17 1.png" />
     <Resource Include="Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17 4.png" />
     <Resource Include="Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17.jpg" />
+    <Resource Include="Resources\del1.png" />
     <Resource Include="Resources\delete.png" />
     <Resource Include="Resources\dw1.png" />
+    <Resource Include="Resources\edit1.png" />
     <Resource Include="Resources\free-icon-dark-mode-6714978.png" />
     <Resource Include="Resources\jornal 2.png" />
     <Resource Include="Resources\msedge_O3xG2PAYzg.png" />
