--- a/Wpf_core_diploma/DIPloma.csproj
+++ b/Wpf_core_diploma/DIPloma.csproj
@@ -13,9 +13,11 @@
     <None Remove="Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17 4.png" />
     <None Remove="Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17.jpg" />
     <None Remove="Resources\del1.png" />
+    <None Remove="Resources\del1While.png" />
     <None Remove="Resources\delete.png" />
     <None Remove="Resources\dw1.png" />
     <None Remove="Resources\edit1.png" />
+    <None Remove="Resources\edit1While.png" />
     <None Remove="Resources\free-icon-dark-mode-6714978.png" />
     <None Remove="Resources\jornal 2.png" />
     <None Remove="Resources\msedge_O3xG2PAYzg.png" />
@@ -50,9 +52,11 @@
     <Resource Include="Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17 4.png" />
     <Resource Include="Resources\1675461282_gas-kvas-com-p-ot-mikrosoft-fonovie-risunki-17.jpg" />
     <Resource Include="Resources\del1.png" />
+    <Resource Include="Resources\del1While.png" />
     <Resource Include="Resources\delete.png" />
     <Resource Include="Resources\dw1.png" />
     <Resource Include="Resources\edit1.png" />
+    <Resource Include="Resources\edit1While.png" />
     <Resource Include="Resources\free-icon-dark-mode-6714978.png" />
     <Resource Include="Resources\jornal 2.png" />
     <Resource Include="Resources\msedge_O3xG2PAYzg.png" />
@@ -75,6 +79,10 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Pages\pdUserAdd\" />
   </ItemGroup>
 
 </Project>
