--- a/Wpf_core_diploma/DIPloma.csproj
+++ b/Wpf_core_diploma/DIPloma.csproj
@@ -15,7 +15,9 @@
     <None Remove="Resources\del1.png" />
     <None Remove="Resources\del1While.png" />
     <None Remove="Resources\delete.png" />
+    <None Remove="Resources\download.png" />
     <None Remove="Resources\dw1.png" />
+    <None Remove="Resources\dwqdwq.png" />
     <None Remove="Resources\edit1.png" />
     <None Remove="Resources\edit1While.png" />
     <None Remove="Resources\free-icon-dark-mode-6714978.png" />
@@ -25,6 +27,7 @@
     <None Remove="Resources\sunny.png" />
     <None Remove="Resources\Update1.png" />
     <None Remove="Resources\Добавить 2 2.png" />
+    <None Remove="Resources\загрузка.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -54,7 +57,9 @@
     <Resource Include="Resources\del1.png" />
     <Resource Include="Resources\del1While.png" />
     <Resource Include="Resources\delete.png" />
+    <Resource Include="Resources\download.png" />
     <Resource Include="Resources\dw1.png" />
+    <Resource Include="Resources\dwqdwq.png" />
     <Resource Include="Resources\edit1.png" />
     <Resource Include="Resources\edit1While.png" />
     <Resource Include="Resources\free-icon-dark-mode-6714978.png" />
@@ -64,6 +69,7 @@
     <Resource Include="Resources\sunny.png" />
     <Resource Include="Resources\Update1.png" />
     <Resource Include="Resources\Добавить 2 2.png" />
+    <Resource Include="Resources\загрузка.png" />
   </ItemGroup>
 
   <ItemGroup>
