--- a/Wpf_core_diploma/DIPloma.csproj
+++ b/Wpf_core_diploma/DIPloma.csproj
@@ -20,6 +20,7 @@
     <None Remove="Resources\dwqdwq.png" />
     <None Remove="Resources\edit1.png" />
     <None Remove="Resources\edit1While.png" />
+    <None Remove="Resources\free-icon-classroom-906175.png" />
     <None Remove="Resources\free-icon-dark-mode-6714978.png" />
     <None Remove="Resources\jornal 2.png" />
     <None Remove="Resources\msedge_O3xG2PAYzg.png" />
@@ -62,6 +63,7 @@
     <Resource Include="Resources\dwqdwq.png" />
     <Resource Include="Resources\edit1.png" />
     <Resource Include="Resources\edit1While.png" />
+    <Resource Include="Resources\free-icon-classroom-906175.png" />
     <Resource Include="Resources\free-icon-dark-mode-6714978.png" />
     <Resource Include="Resources\jornal 2.png" />
     <Resource Include="Resources\msedge_O3xG2PAYzg.png" />
