--- a/Wpf_core_diploma/DIPloma.csproj
+++ b/Wpf_core_diploma/DIPloma.csproj
@@ -23,6 +23,7 @@
     <None Remove="Resources\free-icon-classroom-906175.png" />
     <None Remove="Resources\free-icon-dark-mode-6714978.png" />
     <None Remove="Resources\free-icon-frequency-2961248.png" />
+    <None Remove="Resources\free-icon-innovation-1430941.png" />
     <None Remove="Resources\jornal 2.png" />
     <None Remove="Resources\msedge_O3xG2PAYzg.png" />
     <None Remove="Resources\pngwing.com.png" />
@@ -67,6 +68,7 @@
     <Resource Include="Resources\free-icon-classroom-906175.png" />
     <Resource Include="Resources\free-icon-dark-mode-6714978.png" />
     <Resource Include="Resources\free-icon-frequency-2961248.png" />
+    <Resource Include="Resources\free-icon-innovation-1430941.png" />
     <Resource Include="Resources\jornal 2.png" />
     <Resource Include="Resources\msedge_O3xG2PAYzg.png" />
     <Resource Include="Resources\pngwing.com.png" />
